--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
             <div class="produto" data-preco="99.99">
                 <img src="imagens/teclado.jpg" alt="Teclado Mecânico RGB">
                 <h3>Teclado Mecânico RGB</h3>
-                <p>R$99,99</p>
+                <p>99,99$</p>
                 <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
             </div>
             <div class="produto" data-preco="199.99">
                 <img src="imagens/mouse.jpeg" alt="Mouse Gamer">
                 <h3>Mouse Gamer</h3>
-                <p>R$199,99</p>
+                <p>199,99$</p>
                 <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
             </div>
             <div class="produto" data-preco="299.99">
                 <img src="imagens/headset.jpg" alt="Headset Surround 7.1">
                 <h3>Headset Surround 7.1</h3>
-                <p>R$299,99</p>
+                <p>299,99$</p>
                 <button class="adicionar-carrinho">Adicionar ao Carrinho</button>
             </div>
         </section>
@@ -42,7 +42,7 @@
         <aside class="carrinho">
             <h2>Carrinho de Compras</h2>
             <ul id="lista-carrinho"></ul>
-            <p>Total: <span id="total">R$0,00</span></p>
+            <p>Total: <span id="total">0,00$</span></p>
             <button id="finalizar-compra">Finalizar Compra</button>
         </aside>
     </main>
